# storage/api-docs/api-docs.json
@@ -19,10 +19,10 @@
                 ],
                 "summary": "Search Magic cards",
                 "description": "Search cards using the Scryfall API",
-                "operationId": "569f3a6f9ad00bc3bd45dbc7fe1cc3d5",
+                "operationId": "32fa56a962cd66c2fc878e3b5b3c44e8",
                 "parameters": [
                     {
-                        "name": "query",
+                        "name": "q",
                         "in": "query",
                         "description": "Search query",
                         "required": true,
@@ -38,12 +38,119 @@
                     }
                 }
             }
+        },
+        "/api/decks": {
+            "post": {
+                "tags": [
+                    "Decks"
+                ],
+                "summary": "Create a new deck",
+                "operationId": "c9f612dcc5d32329f327738b766e4aa8",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "name",
+                                    "commander_name",
+                                    "commander_colors",
+                                    "image_url"
+                                ],
+                                "properties": {
+                                    "name": {
+                                        "description": "The deck name",
+                                        "type": "string",
+                                        "example": "Atraxa superfriends"
+                                    },
+                                    "commander_name": {
+                                        "description": "The commander card name",
+                                        "type": "string",
+                                        "example": "Atraxa, Praetors' Voice"
+                                    },
+                                    "commander colors": {
+                                        "description": "Array containing the color codes",
+                                        "type": "string",
+                                        "enum": [
+                                            "W",
+                                            "U",
+                                            "B",
+                                            "R",
+                                            "G"
+                                        ],
+                                        "example": "[\"G\", \"W\", \"U\", \"B\"]"
+                                    },
+                                    "image_url": {
+                                        "description": "URL for the selected commander card print variation image",
+                                        "type": "string",
+                                        "example": "https://cards.scryfall.io/normal/front/d/0/d0d33d52-3d28-4635-b985-51e126289259.jpg?1599707796"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Post created successfully",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "id": {
+                                            "type": "integer",
+                                            "example": 1
+                                        },
+                                        "title": {
+                                            "type": "string",
+                                            "example": "My new post title"
+                                        },
+                                        "content": {
+                                            "type": "string",
+                                            "example": "The actual content of the post."
+                                        },
+                                        "created_at": {
+                                            "type": "string",
+                                            "format": "date-time"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "422": {
+                        "description": "Validation error",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "The title field is required."
+                                        },
+                                        "errors": {
+                                            "type": "object"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
         }
     },
     "tags": [
         {
             "name": "Cards",
             "description": "Cards"
+        },
+        {
+            "name": "Decks",
+            "description": "Decks"
         }
     ]
 }
